--- a/cn.zh-CN/快速入门/业务限制.md
+++ b/cn.zh-CN/快速入门/业务限制.md
@@ -14,8 +14,10 @@
 |自定义策略版本数|5|
 |单个用户绑定自定义策略数|5|
 |单个分组绑定自定义策略数|5|
+|单个角色绑定自定义策略数|5|
 |单个用户绑定系统策略数|20|
 |单个分组绑定系统策略数|20|
+|单个角色绑定系统策略数|20|
 |用户名的字符数|64|
 |组名的字符数|64|
 |权限策略名称的字符数|128|
